# Visualizer

./: .gitignore  CMakeLists.txt  README.md  build.sh
config/: algorithms.ini
dependencies/: CMakeLists.txt  Makefile  cmake_install.cmake
dependencies/imgui-sfml/: Makefile  cmake_install.cmake
dependencies/sfml/: Makefile  cmake_install.cmake
include/: Game.h  Gui.h  State.h
include/States/Algorithms/GraphBased/: GraphBased.h  Node.h  Utils.h
include/States/Algorithms/GraphBased/ASTAR/: ASTAR.h
include/States/Algorithms/GraphBased/BFS/: BFS.h
include/States/Algorithms/GraphBased/DFS/: DFS.h
include/States/Algorithms/GraphBased/DIJKSTRA/: DIJKSTRA.h
install/: linux.sh  mac.sh
src/: Game.cpp  State.cpp  main.cpp
src/States/Algorithms/GraphBased/: GraphBased.cpp  Node.cpp
src/States/Algorithms/GraphBased/ASTAR/: ASTAR.cpp
src/States/Algorithms/GraphBased/BFS/: BFS.cpp
src/States/Algorithms/GraphBased/DFS/: DFS.cpp
src/States/Algorithms/GraphBased/DIJKSTRA/: DIJKSTRA.cpp
